--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -8,6 +8,18 @@ on:
       - main
   workflow_dispatch:
 
+# Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
+# Allow only one concurrent deployment, skipping runs queued between the run in-progress and latest queued.
+# However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
+concurrency:
+  group: "pages"
+  cancel-in-progress: false
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -67,7 +79,7 @@ jobs:
   deploy:
     if: >
       github.ref == 'refs/heads/main'
-      && github.repository == 'UCL/rsd-engineeringcourse'
+      && github.repository == 'UCL-ARC/rsd-summerschool'
     needs: build
     permissions:
       pages: write
