--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -54,7 +54,7 @@ jobs:
           sudo apt-get install python3-pydot graphviz
           python -m pip install -r .github/python/requirements.txt
       - name: Building notes
-        run: make ready
+        run: make ready -j8
       - name: setup directories
         run: |
           mkdir contents
