--- a/.github/workflows/build_site.yml
+++ b/.github/workflows/build_site.yml
@@ -25,10 +25,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      # Adds keys to work with other repositories used in this lesson (e.g., UCL/github-example)
-      # - uses: webfactory/ssh-agent@v0.9.0
-      #   with:
-      #     ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      - uses: webfactory/ssh-agent@v0.9.0
+        with:
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
       - uses: actions/cache@v4 # FIXME: add apt(latex)
         with:
           path: vendor/bundle
